Add ML Final Report content

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,4 @@
+%%% BLOG POST TEMPLATE CITATIONS
 @article{volkens2019manifesto,
   title={The manifesto data collection. Manifesto project (MRG/CMP/MARPOR)},
   author={Volkens, Andrea and Lacewell, Onawa and Lehmann, Pola and Regel, Sven and Schultze, Henrike and Werner, Annika},
@@ -10,4 +11,178 @@
   author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
   journal={arXiv preprint arXiv:1810.04805},
   year={2018}
+}
+
+%%% OUR CITATIONS 
+
+@article{lazer2018science,
+  title={The science of fake news},
+  author={Lazer, David MJ and Baum, Matthew A and Benkler, Yochai and Berinsky, Adam J and Greenhill, Kelly M and Menczer, Filippo and Metzger, Miriam J and Nyhan, Brendan and Pennycook, Gordon and Rothschild, David and others},
+  journal={Science},
+  volume={359},
+  number={6380},
+  pages={1094--1096},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{kim_convolutional_2014,
+	Abstract = {We report on a series of experiments with convolutional neural networks (CNN) trained on top of pre-trained word vectors for sentence-level classification tasks. We show that a simple CNN with little hyperparameter tuning and static vectors achieves excellent results on multiple benchmarks. Learning task-specific vectors through fine-tuning offers further gains in performance. We additionally propose a simple modification to the architecture to allow for the use of both task-specific and static vectors. The CNN models discussed herein improve upon the state of the art on 4 out of 7 tasks, which include sentiment analysis and question classification.},
+	Author = {Kim, Yoon},
+	Date-Added = {2019-06-23 08:30:21 +0100},
+	Date-Modified = {2019-06-23 08:30:21 +0100},
+	File = {arXiv\:1408.5882 PDF:C\:\\Users\\kakia\\Zotero\\storage\\VCCHETZF\\Kim - 2014 - Convolutional Neural Networks for Sentence Classif.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\kakia\\Zotero\\storage\\Z5ADPS7M\\1408.html:text/html},
+	Journal = {arXiv:1408.5882 [cs]},
+	Keywords = {Computer Science - Computation and Language, Computer Science - Neural and Evolutionary Computing},
+	Month = aug,
+	Note = {arXiv: 1408.5882},
+	Title = {Convolutional {Neural} {Networks} for {Sentence} {Classification}},
+	Url = {http://arxiv.org/abs/1408.5882},
+	Urldate = {2018-10-25},
+	Year = {2014},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1408.5882}}
+
+
+@inproceedings{patwa2021fighting,
+  title={Fighting an infodemic: Covid-19 fake news dataset},
+  author={Patwa, Parth and Sharma, Shivam and Pykl, Srinivas and Guptha, Vineeth and Kumari, Gitanjali and Akhtar, Md Shad and Ekbal, Asif and Das, Amitava and Chakraborty, Tanmoy},
+  booktitle={International Workshop onCombating Online Hostile Posts in Regional Languages during Emergency Situation},
+  pages={21--29},
+  year={2021},
+  organization={Springer}}
+  
+  
+@inproceedings{patwa2021overview,
+  title={Overview of constraint 2021 shared tasks: Detecting english covid-19 fake news and hindi hostile posts},
+  author={Patwa, Parth and Bhardwaj, Mohit and Guptha, Vineeth and Kumari, Gitanjali and Sharma, Shivam and Pykl, Srinivas and Das, Amitava and Ekbal, Asif and Akhtar, Md Shad and Chakraborty, Tanmoy},
+  booktitle={International Workshop on Combating Online Hostile Posts in Regional Languages during Emergency Situation},
+  pages={42--53},
+  year={2021},
+  organization={Springer}}
+
+@article{ramachandran2019analysis,
+  title={Analysis of twitter specific preprocessing technique for tweets},
+  author={Ramachandran, Dharini and Parvathi, R},
+  journal={Procedia Computer Science},
+  volume={165},
+  pages={245--251},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@techreport{gimpel2010part,
+  title={Part-of-speech tagging for twitter: Annotation, features, and experiments},
+  author={Gimpel, Kevin and Schneider, Nathan and O'Connor, Brendan and Das, Dipanjan and Mills, Daniel and Eisenstein, Jacob and Heilman, Michael and Yogatama, Dani and Flanigan, Jeffrey and Smith, Noah A},
+  year={2010},
+  institution={Carnegie-Mellon Univ Pittsburgh Pa School of Computer Science}
+}
+
+@article{horne2020, 
+  author = {Horne, Benjamin D. and N\o{}rregaard, Jeppe and Adali, Sibel}, 
+  title = {Robust Fake News Detection Over Time and Attack}, year = {2019}, 
+  issue_date = {February 2020}, 
+  publisher = {Association for Computing Machinery}, 
+  address = {New York, NY, USA}, volume = {11}, 
+  number = {1}, issn = {2157-6904},
+  url = {https://doi.org/10.1145/3363818}, 
+  doi = {10.1145/3363818}, 
+  abstract = {In this study, we examine the impact of time on state-of-the-art news veracity classifiers. We show that, as time progresses, classification performance for both unreliable and hyper-partisan news classification slowly degrade. While this degradation does happen, it happens slower than expected, illustrating that hand-crafted, content-based features, such as style of writing, are fairly robust to changes in the news cycle. We show that this small degradation can be mitigated using online learning. Last, we examine the impact of adversarial content manipulation by malicious news producers. Specifically, we test three types of attack based on changes in the input space and data availability. We show that static models are susceptible to content manipulation attacks, but online models can recover from such attacks.}, 
+  journal = {ACM Trans. Intell. Syst. Technol.}, 
+  month = {dec}, 
+  articleno = {7}, 
+  numpages = {23}, 
+  keywords = {misinformation, Fake news, adversarial machine learning, misleading news, disinformation, robust machine learning, fake news detection, biased news, concept drift} 
+}
+
+@misc{choras2021,
+  doi = {10.48550/ARXIV.2101.01142}, 
+  url = {https://arxiv.org/abs/2101.01142}, 
+  author = {Choras, Michal and Demestichas, Konstantinos and Gielczyk, Agata and Herrero, Alvaro and Ksieniewicz, Pawel and Remoundou, Konstantina and Urda, Daniel and Wozniak, Michal}, 
+  keywords = {Computation and Language (cs.CL), Social and Information Networks (cs.SI), FOS: Computer and information sciences, FOS: Computer and information sciences}, 
+  title = {Advanced Machine Learning Techniques for Fake News (Online Disinformation) Detection: A Systematic Mapping Study},
+  publisher = {arXiv}, 
+  year = {2021}, 
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@article{raza2022fake,
+  title={Fake news detection based on news content and social contexts: a transformer-based approach},
+  author={Raza, Shaina and Ding, Chen},
+  journal={International Journal of Data Science and Analytics},
+  pages={1--28},
+  year={2022},
+  publisher={Springer}
+}
+
+@misc{https://doi.org/10.48550/arxiv.2101.00180,
+  doi = {10.48550/ARXIV.2101.00180}, url = {https://arxiv.org/abs/2101.00180}, author = {Gundapu, Sunil and Mamidi, Radhika}, keywords = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences}, title = {Transformer based Automatic COVID-19 Fake News Detection System}, publisher = {arXiv}, year = {2021}, copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@inproceedings{biesialska-etal-2020-continual,
+    title = "Continual Lifelong Learning in Natural Language Processing: A Survey",
+    author = "Biesialska, Magdalena  and
+      Biesialska, Katarzyna  and
+      Costa-juss{\`a}, Marta R.",
+    booktitle = "Proceedings of the 28th International Conference on Computational Linguistics",
+    month = dec,
+    year = "2020",
+    address = "Barcelona, Spain (Online)",
+    publisher = "International Committee on Computational Linguistics",
+    url = "https://aclanthology.org/2020.coling-main.574",
+    doi = "10.18653/v1/2020.coling-main.574",
+    pages = "6523--6541",
+    abstract = "Continual learning (CL) aims to enable information systems to learn from a continuous data stream across time. However, it is difficult for existing deep learning architectures to learn a new task without largely forgetting previously acquired knowledge. Furthermore, CL is particularly challenging for language learning, as natural language is ambiguous: it is discrete, compositional, and its meaning is context-dependent. In this work, we look at the problem of CL through the lens of various NLP tasks. Our survey discusses major challenges in CL and current methods applied in neural network models. We also provide a critical review of the existing CL evaluation methods and datasets in NLP. Finally, we present our outlook on future research directions.",
+}
+
+@inproceedings{kdmile,
+ author = {Renato Silva and Tiago Almeida},
+ title = {How concept drift can impair the classification of fake news},
+ booktitle = {Anais do IX Symposium on Knowledge Discovery, Mining and Learning},
+ location = {Rio de Janeiro},
+ year = {2021},
+ keywords = {},
+ issn = {2763-8944},
+ pages = {121--128},
+ publisher = {SBC},
+ address = {Porto Alegre, RS, Brasil},
+ doi = {10.5753/kdmile.2021.17469},
+ url = {https://sol.sbc.org.br/index.php/kdmile/article/view/17469}
+}
+
+@article{article,
+author = {Krawczyk, Bartosz and Minku, Leandro and Gama, João and Stefanowski, Jerzy and Wozniak, Michal},
+year = {2017},
+month = {09},
+pages = {132–156},
+title = {Ensemble learning for data stream analysis: A survey},
+volume = {37},
+journal = {Information Fusion},
+doi = {10.1016/j.inffus.2017.02.004}
+}
+
+@INPROCEEDINGS{9073558,  author={Zhang, Shuo and Kejriwal, Mayank},  booktitle={2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)},   title={Concept Drift in Bias and Sensationalism Detection: An Experimental Study},   year={2019},  volume={},  number={},  pages={601-604},  doi={10.1145/3341161.3343690}}
+
+@article{dipta2021heuristic,
+  title={A Heuristic-driven Uncertainty based Ensemble Framework for Fake News Detection in Tweets and News Articles},
+  author={Dipta Das, Sourya and Basak, Ayan and Dutta, Saikat},
+  journal={arXiv e-prints},
+  pages={arXiv--2104},
+  year={2021}
+}
+
+@article{isaksson2020,
+  title={The Impact of Coronavirus on Machine Learning Models},
+  author={Isaksson},
+  year={2020},
+  organization={phData},
+  Url ={https://www.phdata.io/blog/the-impact-of-covid-19-on-machine-learning-models/},
+  Urldate ={2020-06-03}
+}
+
+@article{varma2021systematic,
+  title={A systematic survey on deep learning and machine learning approaches of fake news detection in the pre-and post-COVID-19 pandemic},
+  author={Varma, Rajshree and Verma, Yugandhara and Vijayvargiya, Priya and Churi, Prathamesh P},
+  journal={International Journal of Intelligent Computing and Cybernetics},
+  year={2021},
+  publisher={Emerald Publishing Limited}
 }
